--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -31,3 +31,9 @@ entrypoint = "./functions/send-notification-email/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-notification-email/*.html" ]
+
+[functions.create-subscription]
+verify_jwt = false
+
+[functions.cancel-subscription]
+verify_jwt = false
